--- a/exerciciosDiego/ex04/index.html
+++ b/exerciciosDiego/ex04/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exercício 4</title>
 </head>
-<body onload="adicao()">
+<body onload="multiplicacao()">
     
 <script src="main.js" charset="utf-8"></script>
 </body>
